# mir-cat

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile-local  Makefile  README.md  docker_compose_local.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile-local  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 07728559dce4_first_table_users.py  86546c7f5e2a_add.py
backend/nginx/conf.d/: default.conf
backend/src/: base_exceptions.py  main.py
backend/src/api/: __init__.py  exception_handlers.py  first.py
backend/src/api/auth/: routes.py
backend/src/api/controllers/: user.py
backend/src/api/mappers/: user.py
backend/src/api/schemas/: user.py
backend/src/api/user/: controllers.py  mappers.py  schemas.py
backend/src/apps/: base_apps_exception.py  exception_handler.py  interfaces.py
backend/src/apps/admin/: __init__.py  exception.py  init_admin.py  make_admins.py  user_admin.py
backend/src/apps/services/: __init__.py  email_notification_service.py
backend/src/apps/user/: irepo.py
backend/src/apps/user/services/: auth_user_service.py  get_user_service.py  jwt_service.py
backend/src/apps/user/use_cases/: auth_use_case.py  create_use_case.py  get_by_id_use_case.py
backend/src/config/: __init__.py  broker.py  db_settings.py  jwt_settings.py  redis_settings.py  server_settings.py  settings.py  smtp_settings.py
backend/src/core/bg_tasks/: tasks.py  utils.py
backend/src/data_access/: base_data_access_exceptions.py  handle_err.py
backend/src/data_access/email/: __init__.py  email_message_builder.py  email_sender.py
backend/src/data_access/mappers/: user_mapper.py
backend/src/data_access/models/: __init__.py  base.py  mixins.py  user.py
backend/src/data_access/repositories/: user_repo.py
backend/src/data_access/services/: hasher.py
backend/src/data_access/taskiq/tasks/: email_tasks.py  schedule_tasks.py  scheduled_tasks.py
backend/src/domain/: base_domain_exception.py
backend/src/domain/user/: __init__.py  dtos.py  entity.py  mappers.py  value_objects.py
backend/src/domain/user/interfaces/: __init__.py  password_hasher.py
backend/src/provides/: __init__.py  adapters.py  usecases.py
backend/src/secure/keys/: gen_keys.py
backend/src/shared/: decriptor.py  error_codes.py  exceptions.py  value_objects.py
backend/src/shared/depends/: get_current_user.py
backend/src/shared/domain/: decriptor.py  exceptions.py  value_objects.py
docs/: config.py  jw22t.py  jwt-example.py
src/: main.py
src/config/: db_settings.py  server_settings.py
