[project]
name = "mir-cat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.1",
    "pydantic-settings==2.10.1",
    "uvicorn==0.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "migrations",
    ".venv",
    "tests",
    "Makefile"
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "UP"]
ignore = ["E701"]

[tool.ruff.format]
quote-style = "double"
