[project]
name = "mir-cat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib==4.0.2",
    "alembic==1.16.5",
    "asyncpg==0.30.0",
    "dishka==1.7.1",
    "fastapi==0.116.1",
    "psycopg2-binary==2.9.10",
    "pwdlib[argon2]>=0.2.1",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "python-dotenv>=1.1.1",
    "redis==6.4.0",
    "sqladmin[full]>=0.21.0",
    "sqlalchemy==2.0.43",
    "taskiq==0.11.18",
    "taskiq-fastapi==0.3.5",
    "taskiq-redis==1.1.1",
    "uvicorn==0.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "backend/.venv",
    "tests",
    "Makefile"
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "UP"]
ignore = ["E701"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
